'My Work' section Horizontal overflow fix
Fixed horizontal overflow for 'My Work' section

--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,8 @@ section {
     from, to { border-color: transparent }
     50% { border-color: orange }
   }
+
+/* Horizontal overflow fix at My work section*/
+  #myWork {
+      overflow-x: hidden;
+  }
